work on flip game on bubble page

--- a/bubbles.html
+++ b/bubbles.html
@@ -179,141 +179,142 @@
                             </p>
                         </div>
                     </div>
-<div class="cardcontainer">
-                    <div class="wrapper">
-                        <ul class="cards">
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-1.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-6.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-3.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-2.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-1.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-5.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-2.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-6.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-3.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-4.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-5.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-4.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-4.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-4.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-4.png" alt="card-img">
-                                </div>
-                            </li>
-                            <li class="card">
-                                <div class="view front-view">
-                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
-                                </div>
-                                <div class="view back-view">
-                                    <img src="images/img-4.png" alt="card-img">
-                                </div>
-                            </li>
-                        </ul>
+                    <div id="cardbody">
+                    <div class="cardcontainer">
+                        <div class="wrapper">
+                            <ul class="cards">
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/clownfish_3034378.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/eel_7716895.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/puffer-fish_8047947.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/star_560845.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/clownfish_3034378.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/turtle_3061226.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/star_560845.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/eel_7716895.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/puffer-fish_8047947.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/wink_8466367.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/turtle_3061226.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/wink_8466367.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/ocean_4932799.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/beach-sunset_2350961.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/beach-sunset_2350961.svg" alt="card-img">
+                                    </div>
+                                </li>
+                                <li class="flipcard">
+                                    <div class="view front-view">
+                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                    </div>
+                                    <div class="view back-view">
+                                        <img src="assets/images/game-icons/ocean_4932799.svg" alt="card-img">
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-
 
     </main>
 
