work on flip game

--- a/bubbles.html
+++ b/bubbles.html
@@ -180,12 +180,11 @@
                         </div>
                     </div>
                     <div id="cardbody">
-                    <div class="cardcontainer">
                         <div class="wrapper">
                             <ul class="cards">
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/clownfish_3034378.svg" alt="card-img">
@@ -193,7 +192,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/eel_7716895.svg" alt="card-img">
@@ -201,7 +200,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/puffer-fish_8047947.svg" alt="card-img">
@@ -209,7 +208,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/star_560845.svg" alt="card-img">
@@ -217,7 +216,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/clownfish_3034378.svg" alt="card-img">
@@ -225,7 +224,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/turtle_3061226.svg" alt="card-img">
@@ -233,7 +232,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/star_560845.svg" alt="card-img">
@@ -241,7 +240,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/eel_7716895.svg" alt="card-img">
@@ -249,7 +248,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/puffer-fish_8047947.svg" alt="card-img">
@@ -257,7 +256,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/wink_8466367.svg" alt="card-img">
@@ -265,7 +264,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/turtle_3061226.svg" alt="card-img">
@@ -273,7 +272,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/wink_8466367.svg" alt="card-img">
@@ -281,7 +280,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/ocean_4932799.svg" alt="card-img">
@@ -289,7 +288,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/beach-sunset_2350961.svg" alt="card-img">
@@ -297,7 +296,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/beach-sunset_2350961.svg" alt="card-img">
@@ -305,7 +304,7 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/ocean_4932799.svg" alt="card-img">
@@ -314,7 +313,6 @@
                             </ul>
                         </div>
                     </div>
-                </div>
 
     </main>
 
@@ -334,8 +332,6 @@
             </li>
         </ul>
     </footer>
-    <!-- confetti npm script-->
-    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <!-- javascript script -->
     <script src="assets/js/bubbles.js"></script>
     <!-- bootstrap script -->
