work on errors js bubbles

--- a/bubbles.html
+++ b/bubbles.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- stylesheets -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- google fonts -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=question_mark" />
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -184,7 +187,9 @@
                             <ul class="cards">
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/clownfish_3034378.svg" alt="card-img">
@@ -192,7 +197,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/eel_7716895.svg" alt="card-img">
@@ -200,7 +207,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/puffer-fish_8047947.svg" alt="card-img">
@@ -208,7 +217,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/star_560845.svg" alt="card-img">
@@ -216,7 +227,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/clownfish_3034378.svg" alt="card-img">
@@ -224,7 +237,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/turtle_3061226.svg" alt="card-img">
@@ -232,7 +247,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/star_560845.svg" alt="card-img">
@@ -240,7 +257,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/eel_7716895.svg" alt="card-img">
@@ -248,7 +267,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/puffer-fish_8047947.svg" alt="card-img">
@@ -256,7 +277,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/wink_8466367.svg" alt="card-img">
@@ -264,7 +287,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/turtle_3061226.svg" alt="card-img">
@@ -272,7 +297,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/wink_8466367.svg" alt="card-img">
@@ -280,7 +307,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/ocean_4932799.svg" alt="card-img">
@@ -288,7 +317,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/beach-sunset_2350961.svg" alt="card-img">
@@ -296,7 +327,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/beach-sunset_2350961.svg" alt="card-img">
@@ -304,7 +337,9 @@
                                 </li>
                                 <li class="flipcard">
                                     <div class="view front-view">
-                                        <img src="assets/images/game-icons/question-mark_5726459.png" alt="icon">
+                                        <span class="material-symbols-outlined">
+                                            question_mark
+                                        </span>
                                     </div>
                                     <div class="view back-view">
                                         <img src="assets/images/game-icons/ocean_4932799.svg" alt="card-img">
